build/log/idf_py_stdout_output_73507
[1/9] Performing build step for 'bootloader'
[1/1] cd /home/wallys/esp/hello_world/build/bootloader/esp-idf/esptool_py && /home/wallys/.espressif/python_env/idf5.2_py3.12_env/bin/python /home/wallys/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/wallys/esp/hello_world/build/bootloader/bootloader.bin
Bootloader binary size 0x54e0 bytes. 0x2b20 bytes (34%) free.
[2/9] No install step for 'bootloader'
[3/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/hello_world_main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/hello_world_main.c.obj 
/home/wallys/.espressif/tools/riscv32-esp-elf/esp-13.2.0_20230928/riscv32-esp-elf/bin/riscv32-esp-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.2.1\" -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/wallys/esp/hello_world/build/config -I/home/wallys/esp/esp-idf/components/newlib/platform_include -I/home/wallys/esp/esp-idf/components/freertos/config/include -I/home/wallys/esp/esp-idf/components/freertos/config/include/freertos -I/home/wallys/esp/esp-idf/components/freertos/config/riscv/include -I/home/wallys/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/wallys/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -I/home/wallys/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -I/home/wallys/esp/esp-idf/components/freertos/esp_additions/include -I/home/wallys/esp/esp-idf/components/esp_hw_support/include -I/home/wallys/esp/esp-idf/components/esp_hw_support/include/soc -I/home/wallys/esp/esp-idf/components/esp_hw_support/include/soc/esp32c6 -I/home/wallys/esp/esp-idf/components/esp_hw_support/port/esp32c6/. -I/home/wallys/esp/esp-idf/components/esp_hw_support/port/esp32c6/private_include -I/home/wallys/esp/esp-idf/components/heap/include -I/home/wallys/esp/esp-idf/components/log/include -I/home/wallys/esp/esp-idf/components/soc/include -I/home/wallys/esp/esp-idf/components/soc/esp32c6 -I/home/wallys/esp/esp-idf/components/soc/esp32c6/include -I/home/wallys/esp/esp-idf/components/hal/platform_port/include -I/home/wallys/esp/esp-idf/components/hal/esp32c6/include -I/home/wallys/esp/esp-idf/components/hal/include -I/home/wallys/esp/esp-idf/components/esp_rom/include -I/home/wallys/esp/esp-idf/components/esp_rom/include/esp32c6 -I/home/wallys/esp/esp-idf/components/esp_rom/esp32c6 -I/home/wallys/esp/esp-idf/components/esp_common/include -I/home/wallys/esp/esp-idf/components/esp_system/include -I/home/wallys/esp/esp-idf/components/esp_system/port/soc -I/home/wallys/esp/esp-idf/components/esp_system/port/include/riscv -I/home/wallys/esp/esp-idf/components/esp_system/port/include/private -I/home/wallys/esp/esp-idf/components/riscv/include -I/home/wallys/esp/esp-idf/components/lwip/include -I/home/wallys/esp/esp-idf/components/lwip/include/apps -I/home/wallys/esp/esp-idf/components/lwip/include/apps/sntp -I/home/wallys/esp/esp-idf/components/lwip/lwip/src/include -I/home/wallys/esp/esp-idf/components/lwip/port/include -I/home/wallys/esp/esp-idf/components/lwip/port/freertos/include -I/home/wallys/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/wallys/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/wallys/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/wallys/esp/hello_world/managed_components/espressif__esp_websocket_client/include -I/home/wallys/esp/esp-idf/components/esp-tls -I/home/wallys/esp/esp-idf/components/esp-tls/esp-tls-crypto -I/home/wallys/esp/esp-idf/components/mbedtls/port/include -I/home/wallys/esp/esp-idf/components/mbedtls/mbedtls/include -I/home/wallys/esp/esp-idf/components/mbedtls/mbedtls/library -I/home/wallys/esp/esp-idf/components/mbedtls/esp_crt_bundle/include -I/home/wallys/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/everest/include -I/home/wallys/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m -I/home/wallys/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m/p256-m -I/home/wallys/esp/esp-idf/components/tcp_transport/include -I/home/wallys/esp/esp-idf/components/esp_timer/include -I/home/wallys/esp/esp-idf/components/http_parser -I/home/wallys/esp/esp-idf/components/esp_event/include -I/home/wallys/esp/esp-idf/components/nvs_flash/include -I/home/wallys/esp/esp-idf/components/spi_flash/include -I/home/wallys/esp/esp-idf/components/esp_partition/include -I/home/wallys/esp/esp-idf/components/esp_wifi/include -I/home/wallys/esp/esp-idf/components/esp_wifi/wifi_apps/include -I/home/wallys/esp/esp-idf/components/esp_phy/include -I/home/wallys/esp/esp-idf/components/esp_phy/esp32c6/include -I/home/wallys/esp/esp-idf/components/esp_netif/include -march=rv32imac_zicsr_zifencei  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fno-shrink-wrap -fmacro-prefix-map=/home/wallys/esp/hello_world=. -fmacro-prefix-map=/home/wallys/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/hello_world_main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/hello_world_main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/hello_world_main.c.obj -c /home/wallys/esp/hello_world/main/hello_world_main.c
/home/wallys/esp/hello_world/main/hello_world_main.c: In function 'event_handler':
/home/wallys/esp/hello_world/main/hello_world_main.c:31:28: warning: unused variable 'event' [-Wunused-variable]
   31 |         ip_event_got_ip_t* event = (ip_event_got_ip_t*) event_data;
      |                            ^~~~~
/home/wallys/esp/hello_world/main/hello_world_main.c: In function 'app_main':
/home/wallys/esp/hello_world/main/hello_world_main.c:164:3: error: too few arguments to function 'esp_websocket_client_close'
  164 |   esp_websocket_client_close(client);
      |   ^~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /home/wallys/esp/hello_world/main/hello_world_main.c:4:
/home/wallys/esp/hello_world/managed_components/espressif__esp_websocket_client/include/esp_websocket_client.h:370:11: note: declared here
  370 | esp_err_t esp_websocket_client_close(esp_websocket_client_handle_t client, TickType_t timeout);
      |           ^~~~~~~~~~~~~~~~~~~~~~~~~~
[4/9] Completed 'bootloader'
ninja: build stopped: subcommand failed.
